# mcp-shopware-api

./: .env.example  .gitignore  DEBUGGING.md  README.md  debug_mcp.sh  pyproject.toml
src/mcp_shopware_api/: prompts.py  server.py  tools.py
